# agent-study-content

./: .env.example  README.md  pyproject.toml
app/: __main__.py
app/plugins/SafeCodeInterpreterPlugin/: native_function.py
app/utils/: config.py
